public/css/style.css
body {
  background-color: #f2f2f2;
}

.container {
  padding-top: 50px;
}

nav{
  background-color: #66cccc;
  text-align: center;
  position: fixed;
  width: 100%;
  height: 50px;
  z-index: 10;
}

.navigation-bar a{
  font-size: 20px;
  padding: 10px;
  font-weight: 500;
  text-shadow: none;
  float: right;
}

.navigation-bar a{
  display: inline-block;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: -webkit-transform;
  transition-property: transform;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.navigation-bar a:hover{
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}
.navigation-bar a:link{
  text-decoration: none;
  }

.navigation-bar a:hover,
.navigation-bar a:focus{
  color: #ee8e85; 
  outline: none;
}

.profilepic {
  height: 300px;
}

.screenshot {
  /*height: 200px;*/
  width: 100%;
}

.contact-icons {
  float: left;
  background-color: black;
  height: 50px;
  width: 50px;
  margin: 10px;
}

.aboutme {
  padding-bottom: 30px;
}

.desc {
  /*border: black 1px solid;*/
}

.proj-img {
  /*border: black 1px solid;*/
}

.project{
  padding: 20px;
  height: 300px;
  background-color: #f2f2f2;
}

.panel-default {
  border: #66cccc 1px solid;
}

.panel-group .panel-heading + .panel-collapse .panel-body {
  background-color: #f2f2f2;
}

